tests/error/type_match/base_case_tuple_mismatched_elem_type2.bz
// error: unable to match type 'int8' to 'str'
// note: while matching expression of type '[int32, float64, str, str, int8]' to '[int32, float64, str, str, str]'
function test()
{
	let _: [int32, float64, ...str] = [int32, float64, str, str, int8]();
}
